# OGLBF

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/include/: application.h
app/src/: application.cpp
asserts/: CMakeLists.txt  shader.h.in
asserts/include/: shader.h
asserts/shader/fs/: ambient.vs  diffuse.vs  specular.vs
asserts/shader/vs/: ambient.fs  diffuse.fs  specular.fs
framework/: CMakeLists.txt
framework/include/: core.h  program.h
framework/src/: program.cpp
wrapper/: CMakeLists.txt
wrapper/include/: checkError.h  objmodel.h  utils.h  vertexdata.h
wrapper/src/: checkError.cpp  objmodel.cpp  utils.cpp
